k8s/federation/deployment-cloud-router.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-router
  namespace: ros2-zenoh-federation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-router
  template:
    metadata:
      labels:
        app: cloud-router
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: zenoh-router
          image: quay.io/jianrzha/zenoh-router:latest
          imagePullPolicy: Always
          args: ["-c", "/etc/zenoh/router-cloud.json5"]
          ports:
            - containerPort: 7447
              protocol: TCP
              name: zenoh
            - containerPort: 8001
              protocol: TCP
              name: rest
          readinessProbe:
            tcpSocket:
              port: 7447
            initialDelaySeconds: 3
            periodSeconds: 3
            failureThreshold: 10
          livenessProbe:
            tcpSocket:
              port: 7447
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: configs
              mountPath: /etc/zenoh
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
      volumes:
        - name: configs
          configMap:
            name: federation-configs
